CSS styles are hard

--- a/src/main/resources/WEB-INF/public/css/styles.css
+++ b/src/main/resources/WEB-INF/public/css/styles.css
@@ -1,7 +1,8 @@
 dl dt {
-    font-weight: bold
+    font-weight: bold;
 }
 
-dl dd {
+dl dt, dl dd {
     display: inline-block;
+    margin: 0px 0px 0.5em;
 }
