This should fix the old CSS

--- a/src/main/resources/WEB-INF/public/css/styles.css
+++ b/src/main/resources/WEB-INF/public/css/styles.css
@@ -1,8 +1,13 @@
-dl dt {
-    font-weight: bold;
-}
-
 dl dt, dl dd {
     display: inline-block;
     margin: 0px 0px 0.5em;
+}
+
+dl dt {
+    font-weight: bold;
+    width: 33%;
+}
+
+dl dd {
+    width: 66%;
 }
