Show link back to day summary from items list, refresh day summary on new item

--- a/src/main/resources/WEB-INF/public/templates/foodDayItemsIndex.handlebars
+++ b/src/main/resources/WEB-INF/public/templates/foodDayItemsIndex.handlebars
@@ -1,6 +1,7 @@
 <header>
+    {{debugger}}
     {{#link-to 'foodDays'}}Days{{/link-to}}
-    {{#link-to 'foodDay'}}{{localDate}}{{/link-to}}
+    {{#link-to 'foodDay'}}{{model.localDate}}{{/link-to}}
     {{#link-to 'foodDayItems.new'}}Add New Item{{/link-to}}
 </header>
 <section id="foodDayItemsSection">
