--- a/src/main/resources/WEB-INF/public/templates/foodDaysNew.handlebars
+++ b/src/main/resources/WEB-INF/public/templates/foodDaysNew.handlebars
@@ -2,6 +2,6 @@
     {{#link-to 'foodDays'}}Cancel{{/link-to}}
 </header>
 <section id="foodDaysNewSection">
-    {{input type="text" id="new-foodday" placeholder="What day? (e.g. 2014-10-10)" value=newLocalDate}}
+    {{view "date-picker" type="text" id="new-foodday" placeholder="What day? (e.g. 2014-10-10)" value=newLocalDate}}
     <button {{action 'createFoodDay' target='controller'}}>Submit</button>
 </section>
