--- a/src/main/resources/WEB-INF/public/css/datepicker.css
+++ b/src/main/resources/WEB-INF/public/css/datepicker.css
@@ -3,30 +3,53 @@
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, .5);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, .5);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, .5);
-    background: rgb(200, 200, 200)
+    background: #d5d5d5;
+}
+
+.ui-datepicker-prev, .ui-datepicker-next {
+    display: inline-block;
 }
 
 .ui-datepicker-prev {
     float: left;
-    display: inline-block;
+    padding: 0.5em 0 0 0.5em;
 }
 
 .ui-datepicker-next {
     float: right;
-    display: inline-block;
+    padding: 0.5em 0.5em 0 0;
 }
 
 .ui-datepicker-title {
-    background: -moz-linear-gradient(top, #f7f7f7 0%, #f1f1f1 100%);
-    background: -webkit-linear-gradient(top, #f7f7f7 0%, #f1f1f1 100%);
+    padding: 0.5em 0 0.5em 0;
+    background: -moz-linear-gradient(top, #f7f7f7 0%, #d5d5d5 100%);
+    background: -webkit-linear-gradient(top, #f7f7f7 0%, #d5d5d5 100%);
     text-align: center;
 }
 
 .ui-datepicker thead, .ui-datepicker td {
-    background: -moz-linear-gradient(top, #f7f7f7 0%, #f1f1f1 100%);
-    background: -webkit-linear-gradient(top, #f7f7f7 0%, #f1f1f1 100%);
+    text-align: center;
+    background: -moz-linear-gradient(top, #f7f7f7 0%, #d5d5d5 100%);
+    background: -webkit-linear-gradient(top, #f7f7f7 0%, #d5d5d5 100%);
 }
 
 .ui-datepicker td {
+    padding: 0 0 0 0;
+}
+
+.ui-state-hover {
+    color: #ff0000 !important;
+    background: #d5d5d5;
+}
+
+.ui-datepicker td a {
+    display: block;
+    width: 100%;
+    color: #444444;
     text-decoration: none;
+}
+
+.ui-datepicker th {
+    font-weight: normal; 
+    padding: 0 0.5em 0 0.5em;
 }
