Converting/updating model/adapter/template

--- a/app/templates/food-days/new.hbs
+++ b/app/templates/food-days/new.hbs
@@ -3,5 +3,5 @@
 </header>
 <section id="foodDaysNewSection">
     {{date-picker type="text" id="new-foodday" placeholder="What day? (e.g. 2014-10-10)" value=newLocalDate}}
-    <button {{action 'createFoodDay' target='controller'}}>Submit</button>
+    <button {{action 'createFoodDay'}}>Submit</button>
 </section>
