--- a/app/templates/food-days/index.hbs
+++ b/app/templates/food-days/index.hbs
@@ -8,13 +8,13 @@
         <li>
             <dl>
                 <dt>Date</dt>
-                <dd>{{#link-to 'foodDay' localDate}}{{foodDay.localDate}}{{/link-to}}</dd>
+                <dd>{{#link-to 'foodDay' foodDay.localDate}}{{foodDay.localDate}}{{/link-to}}</dd>
                 <dt>Calories</dt>
                 <dd>{{foodDay.calories}}</dd>
             </dl>
         </li>
         {{else}}
-            <span>No data to show</span>
+            <span>No data to display</span>
         {{/each}}
         <hr/>
     </ul>
